# PyNinja

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pre_commit.sh  pyproject.toml  release_notes.rst  requirements.txt
.github/workflows/: markdown.yaml  python-publish.yaml  release_notes.yaml
doc_gen/: conf.py  index.rst  static.css
docs/: README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
monitor/: __init__.py  auth.py  exceptions.py  main.py  models.py  router.py  routes.py  service.py  squire.py
pyninja/: __init__.py  auth.py  database.py  disks.py  exceptions.py  gpu.py  index.html  main.py  models.py  operations.py  process.py  processor.py  rate_limit.py  router.py  routers.py  routes.py  service.py  squire.py  startup.py  version.py
pyninja/executors/: auth.py  database.py  multifactor.py  routers.py  routes.py  squire.py
pyninja/features/: application.py  cert_expiration.py  certificates.py  cpu.py  disks.py  dockerized.py  gpu.py  operations.py  process.py  processor.py  service.py  zipper.py
pyninja/features/disks/: __init__.py  linux.py  macOS.py  windows.py
pyninja/features/os_disks/: windows.py
pyninja/macOS/: diskutil.py  draft.py  sys_profiler.py
pyninja/modules/: cache.py  email_OTP.html  enums.py  exceptions.py  models.py  payloads.py  rate_limit.py  secure.py  tree.py
pyninja/modules/templates/api/: run_ui.html  swaggerUI.js
pyninja/modules/templates/monitor/: main.html  session.html
pyninja/monitor/: __init__.py  authenticator.py  config.py  drive.py  resources.py  router.py  routes.py  squire.py
pyninja/monitor/templates/: disk_report.html  disk_report_darwin.html  disk_report_linux.html  index.html  logout.html  main.html  session.html  unauthorized.html
pyninja/multifactor/: gmail.py  mfa.py  ntfy.py  otp.py  telegram.py
pyninja/routes/: certificates.py  commands.py  download.py  fullaccess.py  ipaddr.py  metrics.py  namespace.py  observability.py  orchestration.py  run_ui.html  upload.py
samples/: .env  README.md  log_config.yml  secrets.json  secrets.yaml
scripts/: bigbang.py  fileio.py  init.py  restart.md  runbook_coverage.py  self_service_restart.py  zipper.py
tests/: get_test.py  post_test.py
